# Todo-Web-App

./: .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  package-lock.json  package.json
.specify/memory/: constitution.md
backend/: CLAUDE.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  deps.py  router.py  stats.py  todos.py
backend/app/core/: exceptions.py  security.py
backend/app/db/: session.py
backend/app/models/: todo.py  user.py
backend/app/schemas/: common.py  todo.py
backend/app/services/: todo_service.py
frontend/: CLAUDE.md  auth.config.ts  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/actions/: auth.actions.ts  todo.actions.ts
frontend/app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/better-auth_migrations/: 2026-01-06T08-13-09.583Z.sql
frontend/components/auth/: AuthCard.tsx  (+2 more)
frontend/hooks/: use-stats.ts  use-todos.ts  useMediaQuery.ts  useSidebar.ts
frontend/lib/: api-client.ts  auth-client.ts  auth.ts  backend-jwt.ts  constants.ts  db.ts  types.ts
specs/001-frontend-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-tasks-api/: plan.md  spec.md  tasks.md
specs/002-frontend-feature/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-app-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+51 files in other folders)
