[project]
name = "backend"
version = "0.1.0"
description = "FastAPI Tasks API with Better Auth integration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "pydantic-settings>=2.0.0",
    "sqlmodel>=0.0.20",
    "python-jose[cryptography]>=3.3.0",
    "asyncpg>=0.29.0",
]
